--- a/JDM.html
+++ b/JDM.html
@@ -476,7 +476,7 @@
 <form action="http://www.SnapHost.com/captcha/send.aspx" id="ContactUsCaptchaWebForm" method="post" onsubmit="return ValidateForm(this);" target="_top">
 <input name="skip_WhereToSend" type="hidden" value="gchaconl4444@email.com" />
 <input name="skip_SnapHostID" type="hidden" value="XY634S86E5ME" />
-<input name="skip_WhereToReturn" type="hidden" value="http://www.YourWebsiteAddress.com/ThankYouPage.htm" />
+<input name="skip_WhereToReturn" type="hidden" value="marrvviinn.github.io/JDM.html />
 <input name="skip_Subject" type="hidden" value="Contact Us Form" />
 <input name="skip_ShowUsersIp" type="hidden" value="1" />
 <input name="skip_SendCopyToUser" type="hidden" value="1" />
