--- a/JDM.html
+++ b/JDM.html
@@ -607,5 +607,11 @@ $(document).ready(function(){
 })
 </script>
 
+  <script>
+    $("button").on("click", function() {
+      alert("You like this text!");
+    });
+  </script>
+                                  
 </body>
 </html>
