--- a/JDM.html
+++ b/JDM.html
@@ -231,14 +231,6 @@
 <div class="jumbotron text-center">
   <h1>JDM™</h1> 
   <p>A Peaceful Place To Either Buy Custom Tunes Or Cars</p> 
-  <form>
-    <div class="input-group">
-      <input type="Username" class="form-control" size="50" placeholder="Username" required>
-      <div class="input-group-btn">
-        <button type="button" class="btn btn-danger">Enter</button>
-      </div>
-    </div>
-  </form>
 </div>
 
 <!-- Container (About Section) -->
@@ -567,7 +559,7 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>
+  <p>Website Created By Marvin <a href="A Place to buy tunes and cars" title="Hope You Enjoy">Have A Splendid Day</a></p>
 </footer>
 
 <script>
@@ -609,7 +601,7 @@ $(document).ready(function(){
 
   <script>
     $("button").on("click", function() {
-      alert("You like this text!");
+      alert("You Clicked!");
     });
   </script>
                                   
