--- a/JDM.html
+++ b/JDM.html
@@ -268,8 +268,8 @@
   <br>
   <div class="row slideanim">
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-off logo-small"></span>
-      <h4>POWER</h4>
+      <img src="http://icons.iconarchive.com/icons/graphicloads/colorful-long-shadow/256/Power-icon.png">
+     <h4>POWER</h4>
       <p>What is added to the car.</p>
     </div>
     <div class="col-sm-4">
