--- a/JDM.html
+++ b/JDM.html
@@ -273,12 +273,12 @@
       <p>What is added to the car.</p>
     </div>
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-heart logo-small"></span>
+      <img src="http://icons.iconarchive.com/icons/double-j-design/origami-colored-pencil/256/blue-heart-icon.png">
       <h4>LOVE</h4>
       <p>How much we love our cars.</p>
     </div>
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-lock logo-small"></span>
+      <img src="https://cdn2.iconfinder.com/data/icons/Siena/256/suitcase%20blue.png">
       <h4>JOB DONE</h4>
       <p>To make sure the job is done all the way with no wrong doing.</p>
     </div>
@@ -286,17 +286,17 @@
   <br><br>
   <div class="row slideanim">
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-leaf logo-small"></span>
+      <img src="http://www.iconsplace.com/icons/preview/turquoise/hand-planting-256.png">
       <h4>Safe</h4>
       <p>Make sure the environment doesn't get affected to much.</p>
     </div>
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-certificate logo-small"></span>
+      <img src="http://icons.iconarchive.com/icons/graphicloads/colorful-long-shadow/256/Star-fav-icon.png">
       <h4>CERTIFIED</h4>
       <p>Making sure it's pass all test and is ready to go.</p>
     </div>
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-wrench logo-small"></span>
+      <img src="https://cdn2.iconfinder.com/data/icons/metro-uinvert-dock/256/Administrative_Tools.png">
       <h4 style="color:#32A8EB;">HARD WORK</h4>
       <p>No shortcuts or cheats allowed.</p>
     </div>
