--- a/JDM.html
+++ b/JDM.html
@@ -188,7 +188,7 @@
         margin-bottom: 35px;
     }
     img {
-      width:300px;
+      max-width:300px;
     }
   .container-fluid {
       padding: 20px 5px;
@@ -499,7 +499,7 @@ if (pos >= 0) { src = src.substr(0, pos); }
 obj.src = src + '&rad=' + date.getTime();
 return false; }
 </script>
-<table border="0" cellpadding="5" cellspacing="0" max-width="600px">
+<table border="0" cellpadding="0" cellspacing="0" max-width="600px">
 <tr>
 <td><b>Name*:</b></td>
 <td><input name="Name" type="text" maxlength="60" style="max-width:350px;" /></td>
@@ -511,7 +511,7 @@ return false; }
 <td><input name="FromEmailAddress" type="text" maxlength="60" style="max-width:350px;" /></td>
 </tr><tr>
 <td><b>Comments and questions*:</b></td>
-<td><textarea name="Comments" rows="7" cols="30" style="max-width:350px;"></textarea></td>
+<td><textarea name="Comments" rows="7" cols="28" style="max-width:350px;"></textarea></td>
 </tr><tr>
 <td colspan="2" align="center"> <br />
 <table border="0" cellpadding="0" cellspacing="0">
