--- a/JDM.html
+++ b/JDM.html
@@ -196,6 +196,11 @@
   form {
     font-size: 12px;
     }
+   .row {
+     padding: 0px;
+     margin: 0px;
+     border: 0px;
+    }
   }
   @media screen and (max-width: 480px) {
     .logo {
